syntax="proto3";

package genproto;
option go_package="genproto/auth_service";

message RegisterUserModel {
    string client_type_id = 1;
    string role_id = 2;
    string password = 3;
    string phone = 4;
    string email = 5;
    string login = 6;
}

message CreateUserModel {
    string id = 1;
    string client_type_id = 2;
    string role_id = 3;
    string password = 4;
    string login = 5;
    int32 active = 6;
    string phone = 7;
    string email = 8;
    string expires_at = 9;
}

message UpdateUserModel {
    string id = 1;
    string client_type_id = 2;
    string role_id = 3;
    int32 active = 4;
    string expires_at = 5;
    string phone = 6;
    string email = 7;
    string login = 8;
}

message UpdateUserPasswordModel {
    string user_id = 1;
    string new_password = 2;
    string old_password = 3;
}

message UpdateUserActiveModel {
    string user_id = 1;
    int32 active = 2;
}

message UserModel {
    string id = 1;
    string client_type_id = 2;
    string role_id = 3;
    int32 active = 4;
    string password = 5;
    string phone = 6;
    string email = 7;
    string login = 8;
    string created_at = 9;
    string updated_at = 10;
    string expires_at = 11;
}

message RegisteredResponse {
    string user_id = 1;
    string passcode_token = 2;
}

message UserEmail {
    string email = 1;
    string base_url = 2;
}

message UpdateUserPasswordByEmailRequest {
    string token = 1;
    string password = 2;
}