syntax="proto3";

package genproto;
option go_package="genproto/auth_service";

import "user.proto";
import "auth.proto";
import "google/protobuf/empty.proto";

service UserService {
    rpc CreateUser(CreateUserModel) returns (CreatedResponse) {}
    rpc UpdateUser(UpdateUserModel) returns (CreatedResponse) {}
    rpc UpdateUserPassword(UpdateUserPasswordModel) returns (CreatedResponse) {}
    rpc GetUserFull(GetRequest) returns (UserFullModel) {}
    rpc DeleteUser(DeleteRequest) returns (google.protobuf.Empty) {}
    rpc StandardLogin(StandardLoginModel) returns (LoginResponseModel) {}
    rpc One2ManyLogin(One2ManyLoginModel) returns (LoginResponseModel) {}
    rpc RegisterUser(RegisterUserModel) returns (RegisteredResponse) {}
    rpc ConfirmRegister(ConfirmPasscodeModel) returns (LoginResponseModel) {}
    rpc SendUpdatePasswordUrlToEmail(UserEmail) returns (google.protobuf.Empty) {}
    rpc UpdateUserPasswordByEmail(UpdateUserPasswordByEmailRequest) returns (google.protobuf.Empty) {}
}