syntax="proto3";

package genproto;
option go_package="genproto/user_service";

import "respondent.proto";
import "google/protobuf/empty.proto";

service RespondentService {
    rpc Create(CreateRespondent) returns (RespondentId) {}
    rpc Update(UpdateRespondent) returns (RespondentId) {}
    rpc Get(RespondentId) returns (Respondent) {}
    rpc GetAll(GetAllRespondentRequest) returns (GetAllRespondentResponse) {}
    rpc Delete(RespondentId) returns (google.protobuf.Empty) {}
    rpc UpdatePhoto(UpdateRespondentPhoto) returns (google.protobuf.Empty) {}
    rpc UpdateRating(UpdateRespondentRating) returns (google.protobuf.Empty) {}
    rpc UpdateRespondentInn(UpdateRespondentInnRequest) returns (google.protobuf.Empty) {}
}

message GetAllRespondentRequest {
    int64 offset = 1;
    int64 limit = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
}